--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     background-size: cover;
 
     width: 800px;
+    position: relative;
 }
 .header {
     text-align: center;
@@ -40,6 +41,15 @@ body {
     margin-top: 10px;
 }
 
+.insuredNmb {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.insuredNmb {
+    display: none;
+}
+
 label{
     font-size: 12px;
     color: #051b32;
@@ -49,6 +59,11 @@ label{
     display: flex;
     gap: 10px;
 }
+.data, .insurance {
+    outline: none; /* Убираем стандартный outline */
+    transition: outline 0.3s; /* Плавный переход */
+}
+
 
 .buttons {
     display: flex;
@@ -70,21 +85,27 @@ label{
     padding: 10px;
 }
 
-.modal {
-    display: none; /* Скрываем окно по умолчанию */
+#modal {
+    display: none; /* Модальное окно скрыто по умолчанию */
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный фон */
+    background: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
-    z-index: 1000; /* Чтобы было выше других элементов */
-
-
+    z-index: 1000; /* Обеспечиваем, чтобы оно отображалось поверх других элементов */
 }
 
+#modal.active {
+    display: flex;
+    background: rgba(0, 0, 0, 0.5); /* Полупрозрачный фон */
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
 .modal-content {
     background-color: white;
     padding: 20px;
@@ -96,14 +117,13 @@ label{
     background-image: url("https://img.freepik.com/free-photo/medical-banner-with-doctor-wearing-equipment_23-2149611201.jpg?uid=R172460231&ga=GA1.1.574194826.1727612452&semt=ais_hybrid");
     background-repeat: no-repeat;
     background-size: cover;
+
 }
 
 .close {
-    position: absolute;
     top: 10px;
     right: 20px;
-    font-size: 24px;
-    color: red;
+    font-size: 30px;
     cursor: pointer;
 }
 
